l10n: fy-NL, newsletter update by Wim Benes
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107934 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fy-NL/newsletter.lang
+++ b/fy-NL/newsletter.lang
@@ -1,4 +1,4 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+﻿# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
 
 
 ;Get Monthly News
@@ -26,7 +26,7 @@ Blinder! Wês wis dat jo in korrekt e-mailadres ynfolje.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Lês asjobleaft it Mozilla Privacy-belied en gean akkoard troch it fekje oan te finken.
+Lês it Mozilla Privacy-belied en gean akkoard troch it fekje oan te finken.
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
@@ -50,31 +50,31 @@ Wy sjogge der nei út ynkoarten te starten mei it dielen fan tips &amp; trúks o
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Meld jo oan foar moanliks nijs en bliuw o 'e hichte mei Mozilla nijs, ynklusyf de lêste tips en trúks om it bêste út joFirefox browser te krijen. It is de perfekte manier foar ús om yn kontakt te bliuwenh!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+Wy hawwe jo krekt in befestigingse-mail stjoerd. Klik op de befestigingskeppeling yn dizze e-mail om jo oanmelding te falidearjen.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+Lês alles hjiroer yn ús <span>nijsbrief</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Jo nijsbrief oanmelding is befestige.
 
 
 ;Format
-Formaat
+Formaat {OK}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Jo binne klear! <span>Mar Wacht, der is mear</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Wolle jo de meast relevante ynfo krije? Fertel ús wat mear oer josels. En wylst jo hjir binne, meld jo oan foar oar Mozilla nijs.
 
 
 ;Firefox & You
@@ -82,11 +82,11 @@ Firefox & Jo
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Us oare Nijsbrieven:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Krij de lêste tips en trúks o it bêste út jo browser t heljen.
 
 
 ;Firefox Mobile
@@ -94,27 +94,27 @@ Firefox Mobyl
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Lear oer de moaiste nije add-ons en fuksjes foar Firefox mobyl.
 
 
 ;Beta News
-Betanijs
+Bètanijs
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Lês oer de lêste funksjes foar Firefox desktop en mobyl foar de finale útjefte.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Litte wy freonen wurde!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is ek op jo favorite sosjal netwurksiden. Ferbyn mei ús n doch mei ús mei.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Behear jo <span>Nijsbrief abonneminten</span>
 
 
 ;Subscribe
@@ -126,70 +126,70 @@ Ofmelde
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Klik hjir as jo jo ôfmelde wolle foar alle Mozilla e-mails
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Meld my ôf foar alle Mozilla e-mails
 
 
 ;Save Preferences
-Save Preferences
+Bewarje foarkarren
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Tank foar it fernijen fan jo e-mailfoarkarren.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Jo binne ôfmelden.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Wy fine it spitch. Wolle jo ús miskien fertelle wêrom jo jo ôfmelde?
 
 
 ;You send too many emails.
-You send too many emails.
+Jim stjoere te folle e-mails.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Jim ynhâld wie net relevant foar my.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Jim e-mail wie te swier om te lêzen.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Ik haw my hjir net foar oanmelden.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Ik bliuw op 'e hichte mei Mozilla op Facebook en Twitter.
 
 
 ;Submit
-Submit
+Ynstjoere
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Tank foar jo kommentaar wêrom't jo jo ôfmelde.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla nijsbrieven
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Tank! Sjoch yn jo postfek yn om jo oanmelding te befestigjen.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Jo ûntfange in e-mail fan mozilla@e.mozilla.org om de oanmelding te befestigjen. As jo it net sjogge, kontrolearje jo spamfilter. Jo moatte jo oanmelding befestigje om de nijsbrief te ûntfangen.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Wês wis om ús e-mailadres: mozilla@e.mozilla.org ta te efoegjen oan jo adresboek om wis te wêzen dat wy yn jo postfek yn te rjochte komme.
 
 
