Updated for Firefox 15
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107997 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/bn-IN/newsletter.lang
+++ b/bn-IN/newsletter.lang
@@ -54,7 +54,7 @@ Mozilla-র খবরাখবর যেমন Firefox ব্রাউজার 
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-আপনার নিশ্চিতি জানার উদ্দেশ্যে ই-মেইলের মাধ্যমে আপনকে একটি বার্তা পাঠানো হয়েছে। মেইলিং লিস্টের গ্রাহকত্ব সম্পর্কে সম্মতি জ্ঞাপনের জন্য ই-মেইলের মধ্যে উল্লিখিত লিংকে ক্লিক করুন।
+আপনার নিশ্চিতি জানার উদ্দেশ্যে ই-মেইলের মাধ্যমে আপনাকে একটি বার্তা পাঠানো হয়েছে। মেইলিং লিস্টের গ্রাহকত্ব সম্পর্কে সম্মতি জ্ঞাপনের জন্য ই-মেইলের মধ্যে উল্লিখিত লিংকে ক্লিক করুন।
 
 
 ;Read all about it in our <span>newsletter</span>
@@ -62,7 +62,7 @@ Mozilla-র খবরাখবর যেমন Firefox ব্রাউজার 
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+নিউজ-লেটারের গ্রাহকত্ব নিশ্চিত করা হয়েছে।
 
 
 ;Format
@@ -70,7 +70,7 @@ Your newsletter subscription has been confirmed.
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+সব প্রস্তুতি সমাপ্ত হয়েছে! <span>না, আরো কিছু বাকি রয়েছে</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
@@ -78,15 +78,15 @@ Want to get the most relevant info? Tell us a little more about yourself. And wh
 
 
 ;Firefox & You
-Firefox & You
+Firefox ও আপনি
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+আমাদের অন্যান্য নিউজ-লেটার:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+আপনার প্রিয় ব্রাউজারের সর্বোত্তম ব্যবহারের পদ্ধতি জানার উপায় জেনে নিন।
 
 
 ;Firefox Mobile
@@ -94,102 +94,102 @@ Firefox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Firefox মোবাইলের সাথে ব্যবহারযোগ্য নতুন অতিরিক্ত সামগ্রী ও বৈশিষ্ট্যগুলি সম্পর্কে জেনে নিন।
 
 
 ;Beta News
-Beta News
+বিটা সংক্রান্ত খবর
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+প্রধান রিলিজের পূর্বে Firefox ডেস্কটপ ও মোবাইলের নতুন বৈশিষ্ট্যগুলি সম্পর্কে জেনে নিন।
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+তাহলে বন্ধুত্ব হয়ে যাক!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+আপনার পছন্দের সামাজিক নেটওয়ার্কিং সম্প্রদায়েও Firefox উপস্থিত রয়েছে। আমাদের সাথে যোগাযোগ করুন ও আলোচনায় যোগদান করুন।
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+<span>নিউজ-লেটারের গ্রাহকত্ব</span> পরিচালনা করুন
 
 
 ;Subscribe
-Subscribe
+গ্রাহক হন
 
 
 ;Unsubscribe
-Unsubscribe
+গ্রাহকত্ব বাতিল করুন
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+ Mozilla-র কোনো ই-মেইল প্রাপ্ত না করতে হলে এইখানে নির্বাচন করুন
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+আমি Mozilla-র কোনো ই-মেইল প্রাপ্ত করতে ইচ্ছুক নই
 
 
 ;Save Preferences
-Save Preferences
+পছন্দসই মান সংরক্ষণ করা হবে
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+ই-মেইল সংক্রান্ত পছন্দের মান আপডেট করার জন্য ধন্যবাদ।
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+আপনার গ্রাহকত্ব বাতিল করা হয়েছে।
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+আপনার এই সিন্ধান্তে আমরা দুঃখিত। এই সিদ্ধান্তের কারণ আমাদের জানাবেন কি?
 
 
 ;You send too many emails.
-You send too many emails.
+আপনারা অতিরিক্ত ই-মেইল পাঠাতে থাকেন।
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+আপনাদের থেকে প্রাপ্ত তথ্যাদির আমারা কোনো প্রয়োজন ছিল না।
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+আপনাদের ই-মেইলের বিন্যাস পড়তে আমার অসুবিধা হত।
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+আমি এটি প্রাপ্ত করার কোনো সম্মিত কখনো জানাইনি।
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+এর পরিবর্তে আমি Facebook ও Twitter-র মাধ্যমে Mozilla-র সাথে যোগাযোগ রাখতে ইচ্ছুক।
 
 
 ;Submit
-Submit
+দায়ের করুন
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+আপনার সিদ্ধান্তের কারণে আমাদের জানানোর জন্য ধন্যবাদ।
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla-র নিউজ-লেটার
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+ধন্যবাদ! গ্রাহকত্ব নিশ্চিত করার জন্য অনুগ্রহ করে ই-মেইল ইনবক্সে দেখুন।
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+আপনার গ্রাহকত্ব  নিশ্চিত করার উদ্দেশ্যে mozilla@e.mozilla.org থেকে একটি মেইল আপনাকে পাঠানো হবে। ইনবক্সে উপস্থিত না থাকলে অবাঞ্ছিত চিঠির ফোল্ডার অর্থাৎ স্প্যাম ফোল্ডারে দেখুন। নিউজ-লেটার প্রাপ্ত করার জন্য গ্রাহকত্ব নিশ্চিত করা আবশ্যক।
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+আপনার ইনবক্সে আমাদের চিঠি সর্বদা প্রাপ্ত করার জন্য অনুগ্রহ করে আমাদের ই-মেইল ঠিকানা: mozilla@e.mozilla.org আপনার ঠিকানা-বইয়ে যোগ করুন।
 
 
