--- a/bn-IN/whatsnew.lang
+++ b/bn-IN/whatsnew.lang
@@ -2,59 +2,59 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+হুরেএএএ! আপনি  এখন আপ-টু-ডেট Firefox ব্যবহার করছেন।
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+আপনি পুরোনো Firefox ব্যবহার করছেন।
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+নিরাপত্তার কারণে <a href="{url}">নতুন ও সর্বোত্তম সংস্করণ</a>-এ আপগ্রেড  করা বাঞ্ছনীয়।
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Firefox-র অজানা একটি সংস্করণ ব্যবহার করছেন।
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+নিরাপত্তার কারণে <a href="{url}">নতুন ও সর্বোত্তম সংস্করণ</a> ডাউনলোড করা বাঞ্ছনীয়।
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+পরবর্তী কাজে<br/>অবিশ্বাস্য দ্রুততায় পৌছে যান
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Firefox-র নতুন বৈশিষ্ট্যগুলির সাহায্যে কীভাবে আপনি দ্রুত ও সুষ্ঠুরূপে ব্রাউজ করতে পারবেন তা জেনে নিন।
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">নতুন ট্যাব বৈশিষ্ট্য »</a> সম্পর্কে জেনে নিন
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+আমাদের <a href="{url}">প্রধান পৃষ্ঠার নতুন বিন্যাস »</a> সম্পর্কে জেনে নিন
 
 
 ;Keep in touch
-Keep in touch
+আমাদের সাথে যোগাযোগ বজায় রাখুন
 
 
 ;Keep it moving
-Keep it moving
+এগিয়ে চলুন
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Firefox » <b> Android</b> প্রাপ্ত করুন
 
 
 ;Keep it going
-Keep it going
+এগিয়ে চলুন
 
 
 ;Join Mozilla
-Join Mozilla
+Mozilla-এ যোগ দিন
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
@@ -62,38 +62,38 @@ The Android Robot was reproduced from work created and <a href="%s">shared by Go
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Android-র সাথে ব্যবহারযোগ্য Firefox প্রাপ্ত করুন</a> ও ওয়েবের ক্ষমতা নিজের মুঠোয় ভরে নিন। এটি দ্রুত, বৈশিষ্ট্য সম্পন্ন ও নিরাপদ!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+আপনার জন্য সর্বদা প্রস্তুত মোবাইল ব্রাউজার প্রাপ্ত করুন
 
 
 ;Firefox Features
-Firefox Features
+Firefox-র বৈশিষ্ট্য
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Firefox-এ স্বাগতম
 
 
 ;Firefox Help
-Firefox Help
+Firefox সহায়তা
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Android-র সাথে ব্যবহারযোগ্য Firefox-র চিত্র
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+দ্রুত। বৈশিষ্ট্য সম্পন্ন। নিরাপদ।
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+আপনার জন্য সর্বদা প্রস্তুত মোবাইল ব্রাউজারটি প্রাপ্ত করুন।
 
 
