--- a/bn-IN/videos/video_fx13.lang
+++ b/bn-IN/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Firefox-র নতুন বৈশিষ্ট্য] নতুন Firefox-র সাহায্যে আপনি আপনার গন্তব্যে অতি দ্রুত পৌছে যাবেন।
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+প্রধান পাতার নতুন বিন্যাসের সাহায্যে সর্বাধিক ব্যবহৃত মেনুর বিকল্পগুলি সহজেই ব্যবহার করতে পারবেন।
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+যেমন ডাউনলোড, বুকমার্ক, পূর্ববর্তী তথ্য, অতিরিক্ত সামগ্রী, সুসংগতি ও বিবিধ বৈশিষ্ট্য।
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[নতুন ট্যাব পৃষ্ঠা] নতুন ট্যাব পৃষ্ঠায় কিছু উন্নতি করা হয়েছে।
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+নতুন ট্যাব পৃষ্ঠার সাহায্যে আপনি একটি ক্লিকের মাধ্যমে সাম্প্রতিকতম ও সর্বাধিক পরিদর্শিত পৃষ্ঠাগুলিতে পৌছে যাবেন।
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+নতুন ট্যাবের পৃষ্ঠার ব্যবহার আরম্ভ করার জন্য, ব্রাউজারের উপরে অবস্থিত '+' টিপে একটি নতুন ট্যাব খুলুন।
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Awesome-বারের পূর্ববর্তী তথ্য থেকে প্রাপ্ত সম্প্রতি ও সর্বাধিক প্রদর্শিত ওয়েব-সাইটের তথ্য অনুযায়ী নতুন ট্যাব পৃষ্ঠায় এই ওয়েব-সাইটগুলির থাম্ব-নেইল প্রদর্শন করা হবে।
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+থাম্ব-নেইলগুলিকে টেনে পছন্দ অনুসারে সেগুলির অনুক্রম ও স্থান পরিবর্তন করা যাবে।
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+কোনো সাইটকে একটি স্থানে আটক করার জন্য পুশ-পিন টিপুন অথবা 'X' বাটন টিপে সাইটটি সরিয়ে ফেলুন।
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+পৃষ্ঠার উপরে ডানদিকের কোনে উপস্থিত 'গ্রিড' আইকনে ক্লিক করে ফাঁকা নতুন ট্যাব পৃষ্ঠা বিন্যাসে প্রত্যাবর্তন করা যাবে।
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+অবিলম্বে নতুন Firefox প্রাপ্ত করে আজই নতুন বৈশিষ্ট্যগুলি ব্যবহার করা আরম্ভ করুন!
