Updated translation. Bug:729825
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108002 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/bn-IN/snippets.lang
+++ b/bn-IN/snippets.lang
@@ -82,66 +82,66 @@ Android ট্যাবলেট ডিভাইসের সাথে ব্য
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Firefox বিটা সংস্করণ</a> ডাউনলোড করুন ও আমাদের ৪৫ কোটি ব্যবহারকারীদের জন্য Firefox-কে আরো উন্নত করার উদ্দেশ্যে আপনার মতামত জানান।
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+বৈশিষ্ট্যগুলি পরীক্ষা করুন ও আমাদের পরবর্তী সংস্করণের উন্নতিতে সাহায্যে করে বৈশিষ্ট্যগুলিকে পরিস্রুত করুন। <a href="%">Firefox বিটা আজই ডাউনলোড করুন!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Firefox-কে পছন্দ করেন? পরবর্তী সংস্করণকে আরো উন্নত করতে ইচ্ছুক কি? <a href="%">Firefox বিটা ডাউনলোড করুন</a> ও আপনার মতামত আজই জানান!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+সাম্প্রতিকতম Firefox বিটা ব্যবহার করছেন কি? <a href="%">অবিলম্বে প্রাপ্ত করুন</a> ও নতুন বৈশিষ্ট্যগুলি পরীক্ষা করতে আমাদের সাহায্য করুন।
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+সাম্প্রতিকতম Firefox বিটা ব্যবহার করছেন না কি? পরবর্তী সংস্করণের জন্য কী প্রস্তুত করা হচ্ছে জানতে <a href="%">আজই প্রাপ্ত করুন</a>।
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+মতামত জানাতে ইচ্ছুক কি? <a href="%">মতামত জানানোর উপায় জেনে নিন</a> ও Firefox-র পরবর্তী সংস্করণ উন্নত করতে আমাদের সাহায্য করুন।
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Firefox বিটা ব্যবহারকারীদের উদ্দেশ্যে: পরবর্তী সংস্করণের জন্য প্রয়োজনীয় পরিবর্তন করতে সাহায্য করার জন্য <a href="%">আপনাদের</a> মতামত জানাতে ভুলবেন না।
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Help make the next version of Firefox-র পরবর্তী সংস্করণকে আরো উন্নত করতে সাহায্য করুন।  <a href="%">Affiliate হিসাবে যোগদান করুন</a> ও আপনার পরিচিতদের Firefox বিটা সংস্করণ বিলিয়ে দিন।
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Firefox -র নতুন বৈশিষ্ট্যগুলি দেখঅর জন্য আপনার পরিচিতদের আহ্বান করুন। <a href="%">Affiliate হিসাবে যোগদান করুন</a> ও Firefox Aurora বিলিয়ে দিন।
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+একাধিক কম্পিউটারে Firefox ব্যবহার করছেন কি? অতিরিক্ত সামগ্রীগুলি এখন সব কম্পিউটারে সুসংগত করুন।<a href="%">সুসংগতি প্রক্রিয়া সক্রিয় করার উপায় জেনে নিন।</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+দ্রুত, দ্রুত, আরো দ্রুত। <a %s>Android-র সাথে ব্যবহারযোগ্য Firefox-এ উল্লেখযোগ্য আপগ্রেড করা হয়েছে</a>। এই সম্বন্ধে প্রচারে সাহায্য করুন।
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+পরবর্তী কাজে আরো দ্রুত পৌছোনোর উদ্দেশ্যে Firefox-এ কিছু নতুন বৈশিষ্ট্য যোগ করা হয়েছে! <a href="%">অধিক বিবরণের জন্য ভিডিও দেখে নিন।</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Firefox বিটা সংস্করণ পছন্দ? Firefox-এ সংযেজনের জন্য বাছাই করা নতুন বৈশিষ্ট্যগুলি দেখার জন্য <a href="%s">আপনার বন্ধুদের আমন্ত্রণ করুন</a>।
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Firefox-এ নতুন বৈশিষ্ট্যগুলি সংক্ষিপ্ত প্রদর্শনের জন্য আমি Firefox বিটা ব্যবহার করুন। <a href="%s">আপনিও দেখুন</a>।
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Firefox-কে আরো উন্নত করতে সাহায্যে করার উদ্দেশ্যে Firefox বিটা ব্যবহারের করার জন্য ধন্যবাদ। এটি ব্যবহার করার জন্য  <a href="%s">আপনার বন্ধুদের আমন্ত্রণ করুন</a>।
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Firefox-কে আরো উন্নত করার উদ্দেশ্যে এর নতুন বৈশিষ্ট্যগুলি পরীক্ষা করার জন্য আমি Firefox বিটা সংস্করণ ব্যবহার করি। <a href="%s">আপনিও ব্যবহার করে দেখুন</a>।
 
 
