--- a/csb/main.lang
+++ b/csb/main.lang
@@ -408,11 +408,11 @@ Wspiéróné ùrządzenia
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Co nowégò
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Priwatnosc
 
 
