--- a/csb/whatsnew.lang
+++ b/csb/whatsnew.lang
@@ -62,38 +62,36 @@ Robòt Androida je òpiarti na zdroju <a href="%s">Googla</a> ë je ùżëwóny 
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Scygni Firefosa dlô Androida</a> ë wez mòc sécy w swòje rãce. Òn je chùtczi, chitry ë bezpieczny!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Scygni mobilny przezérnik na chtërnym mòżesz spòlegac.
 
 
 ;Firefox Features
-Firefox Features
+Fùnkcje Firefoksa
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Witômë w Firefoksu
 
 
 ;Firefox Help
-Firefox Help
+Pòmòc Firefoksa
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Grafika dlô Androida
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Chùtczi. Chitry. Bezpieczny.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
-
-
+Scygni mobilny przezérnik na chtërnym mòżesz spòlegac.
