--- a/fy-NL/whatsnew.lang
+++ b/fy-NL/whatsnew.lang
@@ -79,7 +79,7 @@ Wolkom by Firefox
 
 
 ;Firefox Help
-Firefox Help
+Firefox Help {ok}
 
 
 # This is the alternate text for the Android image for blind people
