Afrikaans: fix broken </span>
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108067 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/af/mobile.lang
+++ b/af/mobile.lang
@@ -1,3 +1,4 @@
+# The strings below are specific to the Mobile page located at http://www.mozilla.org/mobile/
 ;Get Firefox for Android
 Kry Firefox vir Android
 
@@ -31,7 +32,7 @@ Kry toegang tot Firefox se geskiedenis, boekmerke en oop oortjies op u iPhone.
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Laai Firefox af na <span>u selfoon<span>
+Laai Firefox af na <span>u selfoon</span>
 
 
 ;Want to test the latest features?
@@ -124,3 +125,8 @@ Download and test the build that’s right for you.
 
 ;See all our channels for mobile »
 See all our channels for mobile »
+
+
+# Google Play is the new name of the Android Market
+;Free from the Google Play Store
+Free from the Google Play Store
