Afrikaans: fix punctuation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108068 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/af/snippets.lang
+++ b/af/snippets.lang
@@ -1,5 +1,6 @@
+# these text snippets are mostly used on about:home
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-Neem Firefox oral saam! Die jongste Firefox vir Android is gereed om te gebruik en te geniet. <a href="%s">Kry dit nou.</a>
+Neem Firefox oral saam! Die jongste Firefox vir Android is gereed om te gebruik en te geniet. <a href="%s">Kry dit nou!</a>
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
