Afrikaans: end punctuation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108069 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/af/whatsnew.lang
+++ b/af/whatsnew.lang
@@ -1,12 +1,10 @@
 # This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
-
-
 ;Hooray! Your Firefox is up to date.
 Jippie! Firefox is op datum.
 
 
 ;Your Firefox is out of date.
-Firefox is nie op datum nie
+Firefox is nie op datum nie.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
@@ -95,5 +93,3 @@ Fast. Smart. Safe.
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
 Get the mobile browser that’s got your back.
-
-
