--- a/gd/whatsnew.lang
+++ b/gd/whatsnew.lang
@@ -60,36 +60,36 @@ Chaidh robotair Android ath-chruthachadh air rudan a rinn 's a <a href="%s">cho-
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Faigh Firefox airson Android</a> 's gabh smachd air cumhachd an lìn. Tha e luath, tapaidh agus sàbhailte!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Faigh brabhsair airson fònaichean-làimhe a tha fo do smachd fhèin.
 
 
 ;Firefox Features
-Firefox Features
+Feartan Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Fàilte gu Firefox
 
 
 ;Firefox Help
-Firefox Help
+Cobhair le Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Obair-ealain airson Firefox air Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Luath. Tapaidh. Sàbhailte.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Faigh brabhsair airson fònaichean-làimhe a tha fo do smachd fhèin.
