Scots Gaelic: update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108071 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gd/mobile.lang
+++ b/gd/mobile.lang
@@ -129,4 +129,4 @@ Seall a h-uile seanail againn airson Firefox son innealan-làimhe »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Saor an-asgaidh o bhùth Google Play
