--- a/af/whatsnew.lang
+++ b/af/whatsnew.lang
@@ -60,36 +60,36 @@ Die Android-robot is geherproduseer vanaf werk geskep en <a href="%s">gedeel deu
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Kry Firefox vir Android</a>en kry die krag van die Web byderhand. Dis vinnig, vernuftig en veilig!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Kry nou die selfoonblaaier wat na u omsien
 
 
 ;Firefox Features
-Firefox Features
+Firefox-funksies
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Welkom by Firefox
 
 
 ;Firefox Help
-Firefox Help
+Firefox-hulp
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Kunswerk vir Firefox vir Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Vinnig. Vernuftig. Veilig.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Kry die selfoonblaaier wat na u omsien.
