Afrikaans: first draft of newsletter translation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108106 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/af/newsletter.lang
+++ b/af/newsletter.lang
@@ -1,3 +1,4 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
 ;Get Monthly News
 Kry maandeliks nuus
 
@@ -47,31 +48,31 @@ Ons sien daarna uit om binnekort wenke te deel oor hoe om die meeste uit Firefox
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Skryf in vir die maandelikse nuus en bly op hoogte met Mozilla-nuus, insluitend die jongste wenke om die meeste uit Firefox te kry. Dis die perfekte manier vir ons om in kontak te bly!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+Ons het pas 'n bevestigingsboodskap per e-pos gestuur. Klik op die bevestigingskakel in die e-pos om u inskrywing vir die poslys te bevestig.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+Lees daaroor in ons <span>nuusletter</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+U inskrywing vir die nuusbrief is bevestig.
 
 
 ;Format
-Format
+Formaat
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Nou’s als reg! <span>Daar’s selfs meer moontlikhede</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Lus vir die mees relevante inligting? Vertel ons 'n bietjie van uself, en teken skryf sommer in vir ander Mozilla-nuus.
 
 
 ;Firefox & You
@@ -79,59 +80,59 @@ Firefox & You
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Ons ander nuusbriewe:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Kry die jongste wenke om die meeste uit u gunsteling webblaaier te kry.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox vir selfone
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Vind uit van die kraakvars nuwe byvoegings en funksies vir Firefox vir selfone.
 
 
 ;Beta News
-Beta News
+Beta-nuus
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Lees oor die jongste funksies vir Firefox vir rekenaars en selfone voor die finale vrystelling.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Kom ons bly in kontak!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox is ook op gewilde sosiale netwerke. Hou kontak en neem deel aan die gesprek.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Bestuur u <span>inskrywings vir nuusbriewe</span>
 
 
 ;Subscribe
-Subscribe
+Teken in
 
 
 ;Unsubscribe
-Unsubscribe
+Beëindig intekening
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Merk hier as u geen e-pos meer van Mozilla wil kry nie
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Verwyder my van alle Mozilla-poslyste
 
 
 ;Save Preferences
-Save Preferences
+Stoor voorkeure
 
 
 ;Thanks for updating your email preferences.
@@ -175,16 +176,16 @@ Thanks for telling us why you’re leaving.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla-nuusbriewe
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Dankie! Kyk in u inkassie om u intekening te bevestig.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+U sal 'n e-pos ontvang vanaf mozilla@e.mozilla.org om u intekening te bevestig. Indien u dit nie sien nie, gaan u gemorspos na. 'n Intekening moet bevestig word om ons nuusbrief te ontvang.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Voeg asb. ons e-posadres mozilla@e.mozilla.org in u adresboek om te verseker dat ons altyd u inkassie bereik.
