--- a/en-ZA/mobile.lang
+++ b/en-ZA/mobile.lang
@@ -1,3 +1,4 @@
+# The strings below are specific to the Mobile page located at http://www.mozilla.org/mobile/
 ;Get Firefox for Android
 Get Firefox for Android {ok}
 
@@ -124,3 +125,8 @@ Download and test the build that’s right for you. {ok}
 
 ;See all our channels for mobile »
 See all our channels for mobile » {ok}
+
+
+# Google Play is the new name of the Android Market
+;Free from the Google Play Store
+Free from the Google Play Store {ok}
