--- a/en-ZA/newsletter.lang
+++ b/en-ZA/newsletter.lang
@@ -1,3 +1,4 @@
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
 ;Get Monthly News
 Get Monthly News {ok}
 
