--- a/en-ZA/home.lang
+++ b/en-ZA/home.lang
@@ -1,3 +1,4 @@
+# common strings for all pages
 ;Personalize
 Personalise
 
@@ -26,6 +27,7 @@ We’ve got your back. {ok}
 Get Firefox on your phone! {ok}
 
 
+# Social media page strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/socialmedia
 ;Made for sharing.
 Made for sharing. {ok}
 
@@ -42,6 +44,7 @@ Customise <br/> to make <br/> it faster
 Get add-ons <br/> and make <br/> it easier {ok}
 
 
+# Worker strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/worker
 ;Works harder so <br /> you don't have to.
 Works harder so <br /> you don't have to. {ok}
 
@@ -58,6 +61,7 @@ Easy to <br/> access tabs {ok}
 Productivity <br/> add-ons {ok}
 
 
+# Gamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/gamer
 ;Made for <br/> the way you play.
 Made for <br/> the way you play. {ok}
 
@@ -70,6 +74,7 @@ Made for <br/> the way you play. {ok}
 Even more <br/> reliable {ok}
 
 
+# Messaging strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/messaging
 ;Effortless <br/> customization
 Effortless <br/> customisation
 
@@ -78,6 +83,7 @@ Effortless <br/> customisation
 Advanced <br/> security {ok}
 
 
+# Streamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/streamer
 ;Advanced <br/> graphics
 Advanced <br/> graphics {ok}
 
