--- a/en-ZA/main.lang
+++ b/en-ZA/main.lang
@@ -400,3 +400,17 @@ Upgrade now {ok}
 
 ;Update now
 Update now {ok}
+
+
+;Supported Devices
+Supported Devices {ok}
+
+
+# This is the equivalent of 'Release Notes' but shorter, used next to download buttons
+;What’s New
+What’s New {ok}
+
+
+# This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
+;Privacy
+Privacy {ok}
