--- a/en-ZA/snippets.lang
+++ b/en-ZA/snippets.lang
@@ -1,3 +1,4 @@
+# these text snippets are mostly used on about:home
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>. {ok}
 
