--- a/en-ZA/whatsnew.lang
+++ b/en-ZA/whatsnew.lang
@@ -1,3 +1,4 @@
+# This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
 ;Hooray! Your Firefox is up to date.
 Hooray! Your Firefox is up to date. {ok}
 
@@ -56,3 +57,39 @@ Join Mozilla {ok}
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
 The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>. {ok}
+
+
+;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe! {ok}
+
+
+;Now get the mobile browser that’s got your back
+Now get the mobile browser that’s got your back {ok}
+
+
+;Firefox Features
+Firefox Features {ok}
+
+
+# This is the tab title
+;Welcome to Firefox
+Welcome to Firefox {ok}
+
+
+;Firefox Help
+Firefox Help {ok}
+
+
+# This is the alternate text for the Android image for blind people
+;Firefox for Android artwork
+Firefox for Android artwork {ok}
+
+
+# Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
+;Fast. Smart. Safe.
+Fast. Smart. Safe. {ok}
+
+
+# This message is displayed as a fallback if we don't have a promotional video ready
+;Get the mobile browser that’s got your back.
+Get the mobile browser that’s got your back. {ok}
